infra/longhorn/longhorn-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: default
  hostnames:
  - "longhorn.home.williamlhunter.com"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: longhorn-frontend
        namespace: longhorn-system
        port: 80
